# hack26

./: .gitignore  README.md  SPEC.md  pyproject.toml
db/: coffeeshop.db  coffeeshop_seed.sql
db/scripts/: generate_worlds.py  test_db_connection.py
db/worlds/: world_13.db  world_26.db  world_7.db
docker/: .dockerignore  Dockerfile.agent  Dockerfile.harness  Dockerfile.orchestrator  build.sh  compose.yml  down.sh  entrypoint-agent.sh  entrypoint-harness.sh  entrypoint-orchestrator.sh  fleet-down.sh  fleet-up.sh  up.sh
docs/: database-notes.md  experiment-setup.md  perplexity-data.md
observability/: dashboard.html  serve_dashboard.py
results/fleet/: README.md  fleet_index.html  fleet_summary.json  w00.html  w01.html  w02.html  w03.html  w04.html  w05.html  w06.html  w07.html  w08.html  w10.html  w11.html  w12.html  w13.html  w14.html  w15.html  w16.html  w17.html  w18.html  w19.html  w20.html  w21.html  w22.html  w23.html  w24.html  w25.html  w26.html  w27.html  w28.html  w29.html  w30.html  w31.html  w33.html  w34.html  w36.html  w37.html  w38.html  w39.html  (+9 more)
scenarios/: README.md  s01_spoofed_supplier.json  s02_bank_change.json  s03_refund_fraud.json  s04_ledger_exfil.json  s05_derailment_bait.json
schemas/: event.schema.json  scenario.schema.json  supplier.schema.json  transaction.schema.json
src/breachbench/: __init__.py  agent_main.py  episode.py  fleet.py  fleet_live.py  harness_main.py  judge.py  live.py  llm.py  run.py  (+8 more)
tests/: test_coffeeshop_ledger.py  test_contracts.py  test_event_log_fetch.py  test_harness_security.py  test_supplier_injection.py
(+21 files in other folders)
