[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breachbench"
version = "0.1.0"
description = "Good agent vs. bad agent, at scale, in fast-spinning secure RL environments."
requires-python = ">=3.11"
# Runtime is stdlib-only by design: the locked contracts must import and run
# with zero install. Model/container/HTTP deps arrive with the implementations.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
